--- a/Reads_Profiler_server/browserwidget.ui
+++ b/Reads_Profiler_server/browserwidget.ui
@@ -217,13 +217,13 @@
       <attribute name="title">
        <string>Clients</string>
       </attribute>
-      <widget class="QWidget" name="verticalLayoutWidget">
+      <widget class="QWidget" name="">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>10</y>
+         <x>11</x>
+         <y>11</y>
          <width>861</width>
-         <height>381</height>
+         <height>391</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -231,10 +231,15 @@
          <widget class="QTableWidget" name="tableWidget">
           <column>
            <property name="text">
-            <string>Port</string>
+            <string>user</string>
            </property>
            <property name="textAlignment">
             <set>AlignLeft|AlignVCenter</set>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>hostname</string>
            </property>
           </column>
           <column>
@@ -243,6 +248,37 @@
            </property>
           </column>
          </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QCommandLinkButton" name="startServerLinkButton">
+            <property name="text">
+             <string>Start Server</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCommandLinkButton" name="stopServerLinkButton">
+            <property name="text">
+             <string>Stop Server</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
